--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[05/2025] Two papers are accepted by ACL 2025. </li>
 		<li>[05/2025] I will serve as a program committee member for ICDM 2025. </li>
 		<li>[05/2025] I will serve as a workshop chair for ARRL @ ICDM 2025. </li>
 		<li>[04/2025] I am invited to give a keynote talk at the workshop on Foundational AI for Pervasive Computing at PAKDD 2025. </li>
@@ -155,19 +156,25 @@
             <h2>Selected Publications</h2>
 		<p style="color:red;">For a full list of publications, see <a href="publications.html">Publications</a>.</p>
             <ul>
+
+		<li>
+			<strong>[ACL'25]</strong> Uncertainty Propagation on LLM Agent. </br>
+			Qiwei Zhao<sup>*</sup>, Dong Li<sup>*</sup>, Yanchi Liu, Wei Cheng, Yiyou Sun, Mika Oishi, Takao Osaki, Katsushi Matsuda, Huaxiu Yao, <strong>Chen Zhao</strong>, Haifeng Chen, Xujiang Zhao. <br/>
+			<em>In Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics</em>, 2025
+		</li>
 		<li>
 			<strong>[IJCAI'25]</strong> FADE: Towards Fairness-aware Data Generation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
-			<u>Yujie Lin</u><sup>*</sup>, <u>Dong Li</u><sup>*</sup>, Minglai Shao, Guihong Wan, <strong>Chen Zhao</strong>. <br/>
-			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2024
+			Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, Minglai Shao, Guihong Wan, <strong>Chen Zhao</strong>. <br/>
+			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2025
 		</li>
 		<li>
 			<strong>[IJCAI'25]</strong> A Novel Sparse Active Online Learning Framework for Streaming Anomaly Detection in Open Feature Spaces. </br>
 			Zhong Chen, Yi He, Di Wu, <strong>Chen Zhao</strong>, Meikang Qiu. <br/>
-			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2024
+			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2025
 		</li>   
                 <li>
 			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
-			<u>Sadaf Md Halim</u>, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
+			Sadaf Md Halim, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
 			<em>In Proceedings of the IEEE International Conference on Data Engineering</em>, 2025
 		</li>
 		<li>
@@ -182,7 +189,7 @@
 		</li>
 		<li>
                         <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
-                        <u>Qin Tian</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
+                        Qin Tian, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
                         <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
                 </li>
 		<li>
@@ -192,12 +199,12 @@
 		</li>
 		<li>
 			<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. </br>
-			Minglai Shao<sup>*</sup>, <u>Dong Li</u><sup>*</sup>, <strong>Chen Zhao</strong><sup>*</sup>, Xintao Wu, <u>Yujie Lin</u>, Qin Tian. <br/>
+			Minglai Shao<sup>*</sup>, Dong Li<sup>*</sup>, <strong>Chen Zhao</strong><sup>*</sup>, Xintao Wu, Yujie Lin, Qin Tian. <br/>
 			<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
 		</li>
 		<li>
 			<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. </br>
-			<u>Yujie Lin</u>, <strong>Chen Zhao</strong>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen. <br/>
+			Yujie Lin, <strong>Chen Zhao</strong>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen. <br/>
 			<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
 		</li>
 		<li>
