--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		Prior to joining Baylor, I was a senior R&D computer vision engineer at Kitware Inc. 
 		I earned my Ph.D. degree in Computer Science from the University of Texas at Dallas (UTD) in 2021, advised by <a href="https://personal.utdallas.edu/~fxc190007/">Feng Chen</a>. 
 		I received dual M.S. degrees in Computer Science and Biomedical Science from the State University of New York at Albany (UAlbany), and Albany Medical College in 2016. 
-		My publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, IJCAI, ICDM, TKDD, <em>etc</em>. 
+		My publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, IJCAI, ACL, TKDD, <em>etc</em>. 
 		I have served as a PC member for several international conferences and workshops, such as NeurIPS, KDD, AAAI, IJCAI, ICML, ICLR, <em>etc</em>.
 	</div>
 
