--- a/publications.html
+++ b/publications.html
@@ -128,6 +128,7 @@
             <p style="text-align:justify;background-color:#dbd9db">
                 <strong>KDD</strong>(5), 
                 <strong>IJCAI</strong>(4), 
+		<strong>ACL</strong>(2), 
                 <strong>AAAI</strong>(3),
                 <strong>CVPR</strong>(1), 
                 <strong>ICDE</strong>(1),
