--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
 
         <div class="my-4 text-left">
             <h2>Publications</h2>
-            (<u>underline</u> indicates student advisee, * indicates equal contribution)
+            (* indicates equal contribution)
             <br>
             <br>
 
@@ -56,12 +56,12 @@
 
                     <li>
                         Multi-Modal Foundation Models for Computational Pathology: A Survey. <br>
-                        <u>Dong Li</u><sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, <u>Xinyu Wu</u>, <u>Xiaohui Chen</u>, Yi He, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
+                        Dong Li<sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Xiaohui Chen, Yi He, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
                         <em>ArXiv preprint, 2503.09091</em>
                     </li>
                     <li>
                         A Survey on Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluation Tasks. <br>
-                        <u>Dong Li</u><sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, <u>Xinyu Wu</u>, Ajit J. Nirmal, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
+                        Dong Li<sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Ajit J. Nirmal, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
                         <em>ArXiv preprint, 2501.15724</em>
                     </li>
                     <li>
@@ -71,12 +71,12 @@
                     </li>
                     <li>
                 		Graphs Generalization under Distribution Shifts. </br>
-                		<u>Qin Tian</u>, Wenjun Wang, <strong>Chen Zhao</strong>, Minglai Shao, Wang Zhang, Dong Li. <br/>
+                		Qin Tian, Wenjun Wang, <strong>Chen Zhao</strong>, Minglai Shao, Wang Zhang, Dong Li. <br/>
                 		<em>ArXiv preprint, 2403.16334</em>
                 	</li>
                     <li>
                 		Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. </br>
-                		<u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Yunhui Guo, Kai Jiang, Feng Chen. <br/>
+                		Haoliang Wang, <strong>Chen Zhao</strong>, Yunhui Guo, Kai Jiang, Feng Chen. <br/>
                 		<em>ArXiv preprint, 2309.10209</em>
                 	</li>
                     <li>
@@ -92,7 +92,7 @@
 
 		    	<li>
                         	<strong>[KBS]</strong> Out-of-Distribution Detection in Heterogeneous Graphs via Energy Propagation. <br>
-                		<u>Yin Tao</u>, <strong>Chen Zhao</strong>, Xiaoyan Liu, Minglai Shao. <br/>
+                		Yin Tao, <strong>Chen Zhao</strong>, Xiaoyan Liu, Minglai Shao. <br/>
                         	<em>Knowledge-Based Systems</em>, 2025
                     	</li>
                     	<li>
@@ -102,7 +102,7 @@
                     	</li>
                     	<li>
                         	<strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
-                        	<u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen. <br>
+                        	Haoliang Wang, <strong>Chen Zhao</strong>, Feng Chen. <br>
                         	<em>Frontiers in Big Data, section Data Mining and Management</em>, 2024
                     	</li>
                     	<li>
@@ -147,9 +147,21 @@
             </p>
             
                 <ol>
+
+		<li>
+			<strong>[ACL'25]</strong> Uncertainty Propagation on LLM Agent. </br>
+			Qiwei Zhao<sup>*</sup>, Dong Li<sup>*</sup>, Yanchi Liu, Wei Cheng, Yiyou Sun, Mika Oishi, Takao Osaki, Katsushi Matsuda, Huaxiu Yao, <strong>Chen Zhao</strong>, Haifeng Chen, Xujiang Zhao. <br/>
+			<em>In Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics</em>, 2025
+		</li>
+		<li>
+			<strong>[ACL'25, Findings]</strong> Let The Jury Decide: Fair Demonstration Selection for In-Context Learning through Incremental Greedy Evaluation. </br>
+			Sadaf MD Halim, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Fariha Ishrat Rahman, Feng Chen. <br/>
+			<em>In Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics</em>, 2025
+		</li>
+			
 		<li>
 			<strong>[IJCAI'25]</strong> FADE: Towards Fairness-aware Data Generation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
-			<u>Yujie Lin</u><sup>*</sup>, <u>Dong Li</u><sup>*</sup>, Minglai Shao, Guihong Wan, <strong>Chen Zhao</strong>. <br/>
+			Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, Minglai Shao, Guihong Wan, <strong>Chen Zhao</strong>. <br/>
 			<em>In Proceedings of the 34th International Joint Conference on Artificial Intelligence</em>, 2024
 		</li>
 		<li>
@@ -159,7 +171,7 @@
 		</li> 
                 <li>
 			<strong>[ICDE'25]</strong> Fairness-aware Active Online Learning with Changing Environments. <br>
-			<u>Sadaf Md Halim</u>, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
+			Sadaf Md Halim, <strong>Chen Zhao</strong>, Xintao Wu, Latifur Khan, Christan Grant, Feng Chen. <br>
 			<em>In Proceedings of the IEEE International Conference on Data Engineering</em>, 2025
 		    </li>
                     <li>
@@ -169,12 +181,12 @@
                     </li>
                     <li>
                         <strong>[ICASSP'25]</strong> GDDA: Semantic OOD Detection on Graphs under Covariate Shift via Score-Based Diffusion Model. <br>
-                        <u>Zhixia He</u>, <strong>Chen Zhao</strong>, Minglai Shao, <u>Yujie Lin</u>, <u>Dong Li</u>, <u>Qin Tian</u> <br>
+                        Zhixia He, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin, Dong Li, Qin Tian <br>
                         <em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2025
                     </li>
                     <li>
                         <strong>[ICASSP'25]</strong> Hypergraph-Based Dynamic Graph Node Classification. <br>
-                        <u>Xiaoxu Ma</u>, <strong>Chen Zhao</strong>, Minglai Shao, <u>Yujie Lin</u> <br>
+                        Xiaoxu Ma, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin <br>
                         <em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2025
                     </li>
                     <li>
@@ -194,27 +206,27 @@
                     </li>
                     <li>
                         <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
-                        <u>Qin Tian</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
+                        Qin Tian, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
                         <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
                     </li>
                     <li>
                         <strong>[BigData'24]</strong> Feature-Space Semantic Invariance: Enhanced OOD Detection for Open-Set Domain Generalization. <br>
-                        <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen <br>
+                        Haoliang Wang, <strong>Chen Zhao</strong>, Feng Chen <br>
                         <em>In Proceedings of the IEEE International Conference on Big Data</em>, 2024
                     </li>
                     <li>
                         <strong>[BigData'24]</strong> MADOD: Generalizing OOD Detection to Unseen Domains via G-Invariance Meta-Learning. <br>
-                        <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen <br>
+                        Haoliang Wang, <strong>Chen Zhao</strong>, Feng Chen <br>
                         <em>In Proceedings of the IEEE International Conference on Big Data</em>, 2024
                     </li>
                     <li>
                         <strong>[BigData'24]</strong> FEED: Fairness-Enhanced Meta-Learning for Domain Generalization. <br>
-                        <u>Kai Jiang</u>, <strong>Chen Zhao</strong>, Haoliang Wang, Feng Chen <br>
+                        Kai Jiang, <strong>Chen Zhao</strong>, Haoliang Wang, Feng Chen <br>
                         <em>In Proceedings of the IEEE International Conference on Big Data</em>, 2024
                     </li>
                     <li>
                 		<strong>[CIKM'24]</strong> Learning Fair Invariant Representations under Covariate and Correlation Shifts Simultaneously. </br>
-                		<u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang. <br/>
+                		Dong Li, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang. <br/>
                 		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em>, 2024
                 	</li>
                 	<li>
@@ -229,12 +241,12 @@
                 	</li>
                 	<li>
                 		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. </br>
-                		Minglai Shao<sup>*</sup>, <u>Dong Li</u><sup>*</sup>, <strong>Chen Zhao</strong><sup>*</sup>, Xintao Wu, <u>Yujie Lin</u>, Qin Tian. <br/>
+                		Minglai Shao<sup>*</sup>, Dong Li<sup>*</sup>, <strong>Chen Zhao</strong><sup>*</sup>, Xintao Wu, Yujie Lin, Qin Tian. <br/>
                 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
                 	</li>
                 	<li>
                 		<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. </br>
-                		<u>Yujie Lin</u>, <strong>Chen Zhao</strong>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen. <br/>
+                		Yujie Lin, <strong>Chen Zhao</strong>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen. <br/>
                 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
                 	</li>
                     <li>
@@ -244,7 +256,7 @@
                 	</li>
                     <li>
                 		<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. </br>
-                		<u>Yujie Lin</u>, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao, Haifeng Chen.<br/>
+                		Yujie Lin, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao, Haifeng Chen.<br/>
                 		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em>, 2023
                 	</li>
                 	<li>
@@ -329,42 +341,42 @@
                 	</li>
                     <li>
                         <strong>[KDD'24-W]</strong> Semantic OOD Detection under Covariate Shift on Graphs with Diffusion Model. </br>
-                        <u>Zhixia He</u>, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin, Dong Li. <br/>
+                        Zhixia He, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin, Dong Li. <br/>
                         <em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
                     </li>
                     <li>
                         <strong>[KDD'24-W]</strong> IDGG: Invariant Learning for Out-of-Distribution Generalization on Graphs. </br>
-                        <u>Qin Tian</u>, Wenjun Wang, Minglai Shao, <strong>Chen Zhao</strong>, Dong Li. <br/>
+                        Qin Tian, Wenjun Wang, Minglai Shao, <strong>Chen Zhao</strong>, Dong Li. <br/>
                         <em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
                     </li>
                     <li>
                         <strong>[KDD'24-W]</strong> HyperDG: A Hypergraph-Based Approach for Dynamic Graph Node Classification under Spatio-Temporal Shift. </br>
-                        <u>Xiaoxu Ma</u>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
+                        Xiaoxu Ma, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
                         <em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
                     </li>
                     <li>
                         <strong>[KDD'24-W]</strong> Out-of-Distribution Detection for Heterogeneous Graph Neural Networks. </br>
-                        <u>Tao Yin</u>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
+                        Tao Yin, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
                         <em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
                     </li>
                     <li>
                         <strong>[KDD'24-W]</strong> Fair Data Generation via Score-based Diffusion Model. </br>
-                        <u>Yujie Lin</u>, <u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
+                        Yujie Lin, Dong Li, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
                         <em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications</em>, 2024
                     </li>
                     <li>
                 		<strong>[NeurIPS'23-W]</strong> Achieving Counterfactual Fairness in Changing Environments via Sequential Autoencoder. </br>
-                		<u>Yujie Lin</u>, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao, Baoluo Meng, Haifeng Chen. <br/>
+                		Yujie Lin, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao, Baoluo Meng, Haifeng Chen. <br/>
                 		<em>NeurIPS Workshop on Algorithmic Fairness through the Lens of Time</em>, 2023
                 	</li>
                     <li>
                 		<strong>[KDD'23-W]</strong> Learning Fair and Domain Generalization Representation. </br>
-                		<u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao. <br/>
+                		Dong Li, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao. <br/>
                 		<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications</em>, 2023
                 	</li>
                 	<li>
                 		<strong>[KDD'23-W]</strong> Adaptation Speed of Causal Models Concerning Fairness. </br>
-                		<u>Yujie Lin</u>, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao, Haifeng Chen. <br/>
+                		Yujie Lin, <strong>Chen Zhao</strong>, Minglai Shao, Xujiang Zhao, Haifeng Chen. <br/>
                 		<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications</em>, 2023
                 	</li>
                 	<li>
