--- a/services.html
+++ b/services.html
@@ -245,11 +245,18 @@
             </ul>
             
 
-            <p><strong>National Science Foundation (NSF) Panelist </strong></p>
+            <p><strong>Grant Proposal Review Panelists </strong></p>
 	    <ul>
-		    <li>2025 (x1) </li>
-		    <li>2024 (x3) </li>
-		    <li>2023 (x1) </li>
+		    <li> National Science Foundation (NSF):
+			    <ul>
+				    <li>2025 (x1) </li>
+				    <li>2024 (x3) </li>
+				    <li>2023 (x1) </li>
+			    </ul>
+		    <li> The U.S. Department of Energy (DOE):
+			    <ul>
+				    <li> 2025 (x1) </li>
+			    </ul>
 	    </ul>
 
 		
