--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[05/2025] I will serve as a panelist for DOE </li>
 		<li>[05/2025] Two papers are accepted by ACL 2025. </li>
 		<li>[05/2025] I will serve as a program committee member for ICDM 2025. </li>
 		<li>[05/2025] I will serve as a workshop chair for ARRL @ ICDM 2025. </li>
