--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[05/2025] I receive a Gift Fund from NEC Laboratories America. </li>
 		<li>[05/2025] I will serve as a panelist for DOE </li>
 		<li>[05/2025] Two papers are accepted by ACL 2025. </li>
 		<li>[05/2025] I will serve as a program committee member for ICDM 2025. </li>
@@ -259,10 +260,11 @@
 	<div class="my-4 text-left">
 	    <h2>Awards & Honors</h2>
 		<ul>
-			<li type="disc"> Outstanding Reviewer, The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD2025).</li>
-			<li type="disc"> Dissertation Research Award, $1,224, The University of Texas at Dallas, 2021-2022. </li>
-			<li type="disc"> Student Travel Award, IEEE International Conference on Data Mining (ICDM), U.S. National Science Foundation, 2020. </li>
-			<li type="disc"> First Prize in the 11th "Challenge Cup" National Undergraduate Academic Science and Technology, Tianjin Municipal Education Commission, Top 5% among all works in Tianjin City, 2011. </li>
+			<li type="disc"> Gift Fund. NEC Laboratories America. </li>
+			<li type="disc"> Outstanding Reviewer. The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD2025).</li>
+			<li type="disc"> Dissertation Research Award. The University of Texas at Dallas, 2021-2022. </li>
+			<li type="disc"> Student Travel Award. IEEE International Conference on Data Mining (ICDM), U.S. National Science Foundation, 2020. </li>
+			<li type="disc"> First Prize in the 11th "Challenge Cup" National Undergraduate Academic Science and Technology. Tianjin Municipal Education Commission, Top 5% among all works in Tianjin City, 2011. </li>
 		</ul>
 	</div>
 
