--- a/students.html
+++ b/students.html
@@ -128,8 +128,10 @@
             	<ul>
             		<li>Joseph Yu, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
                     <li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
-                    <li>Shaif Chowdhury, Ph.D. student, Department of Computer Science, Baylor University, 2025 (expected) </li>
+                    <li>Abhishek Raj, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
                     <li>Kai Jiang, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2025 (expected) </li>
+                    
+                    <li>Shaif Chowdhury, Ph.D. student, Department of Computer Science, Baylor University, 2025 </li>
             		<li>Feng Mi, Ph.D. student, Department of Computer Science, The University of Texas at Dallas, 2025 </li>
             		<li>Alessandra Rodriguez, M.S., Department of Computer Science, Baylor University, 2023  </li>
             	</ul>
@@ -139,10 +141,10 @@
             <div>
             <p><strong>Graduate Students Mentored (Beyond Baylor)</strong></p>
             	<ul>
-            		<li>Haoliang Wang, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
             		<li>Kai Jiang, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
                     <li>Kangshuo Li, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
                     <li>Sadaf Md Halim, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
+                    <li>Haoliang Wang, Ph.D. student, The University of Texas at Dallas, 2025 </li>
             	</ul>
             </div>
 
