--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<br>
 	<strong>Call for papers</strong>: Mathematics, MDPI, Special Issue: <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D">Advances in Trustworthy and Robust Artificial Intelligence</a>. 
 	<br>
-	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning (ARRML @ SDM 2025)</a>.
+<!-- 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning (ARRML @ SDM 2025)</a>. -->
 <!-- 	<br>
 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare (TrustML4Health @ IEEE BigData 2024)</a>. -->
 	</p>
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[05/2025] I will serve as a panelist for NSF. </li>
 		<li>[05/2025] I receive a Gift Fund from NEC Laboratories America. </li>
 		<li>[05/2025] I will serve as a panelist for DOE </li>
 		<li>[05/2025] Two papers are accepted by ACL 2025. </li>
