--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,11 @@
             <p><strong>Preprints</strong></p>
                 <ol>
 
+		    <li>
+			A Survey of AI for Materials Science: Foundation Models, LLM Agents, Datasets, and Tools. <br>
+			Minh-Hao Van, Prateek Verma, <strong>Chen Zhao</strong>, Xintao Wu. <br>
+			<em>ArXiv preprint, 2506.20743</em>
+		    </li>
                     <li>
                         Multi-Modal Foundation Models for Computational Pathology: A Survey. <br>
                         Dong Li<sup>*</sup>, Guihong Wan<sup>*</sup>, Xintao Wu, Xinyu Wu, Xiaohui Chen, Yi He, Christine G. Lian, Peter K. Sorger, Yevgeniy R. Semenov, <strong>Chen Zhao</strong>. <br>
