--- a/services.html
+++ b/services.html
@@ -264,6 +264,7 @@
 		
 	    <p><strong>University and Department Services </strong></p>
 	    <ul>
+		    <li>Search Committee Member, Department of Computer Science, Baylor University, 2025 - 2026 </li>
 		    <li>Judge for the Outstanding Graduate Student Research Award, Baylor University, 2023 - 2024 </li>
 		    <li>Outreach, Inclusion and Belonging Committee Member, School of Engineering and Computer Science, Baylor University, since 2024</li>
 		    <li>Engagement Committee, Department of Computer Science, Baylor University, since 2023 </li>
