--- a/services.html
+++ b/services.html
@@ -190,7 +190,8 @@
 				<li>IEEE Transactions on Industrial Informatics</li>
 				<li>Entropy, MDPI</li>
 				<li>IEEE Transactions on Big Data</li>
-				<li>Journal of Frontiers in Big Data</li>
+				<li>Frontiers in Big Data</li>
+				<li>Frontiers in Artificial Intelligence</li>
 				<li>ACM Transactions on Knowledge Discovery from Data (TKDD)</li>
 				<li>Pattern Recognition</li>
 			</ul>
