--- a/publications.html
+++ b/publications.html
@@ -339,11 +339,22 @@
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Workshop Papers</strong></p>
                 <ol>
+
+		    <li>
+			<strong>[KDD'25-W]</strong> Multi-Modal Out-of-Distribution Detection with Large Language Models. <br>
+			Zhixia He, <strong>Chen Zhao</strong>, Minglai Shao, Dong Li, Qin Tian. <br>
+			<em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2025
+		    </li>
+		    <li>
+			<strong>[KDD'25-W]</strong> Drift-Aware Proxy Uncertainty Estimation for Large Language Models in Temporal Streams. <br>
+			Haoliang Wang, Dong Li, <strong>Chen Zhao</strong>. <br>
+			<em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2025
+		    </li>
                     <li>
-                		<strong>[CVPR'24-W]</strong> Causal Diffusion Autoencoders: Toward Representation-Enabled Counterfactual Generation via Diffusion Probabilistic Models. </br>
-                		Aneesh Komanduri, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br/>
-                		<em>CVPR Workshop on Generative Models for Computer Vision</em>, 2024
-                	</li>
+			<strong>[CVPR'24-W]</strong> Causal Diffusion Autoencoders: Toward Representation-Enabled Counterfactual Generation via Diffusion Probabilistic Models. </br>
+			Aneesh Komanduri, <strong>Chen Zhao</strong>, Feng Chen, Xintao Wu. <br/>
+			<em>CVPR Workshop on Generative Models for Computer Vision</em>, 2024
+                    </li>
                     <li>
                         <strong>[KDD'24-W]</strong> Semantic OOD Detection under Covariate Shift on Graphs with Diffusion Model. </br>
                         Zhixia He, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin, Dong Li. <br/>
