--- a/services.html
+++ b/services.html
@@ -100,6 +100,10 @@
 
             <p><strong>Conference Program Committee / Reviewer </strong></p>
             <ul>
+		    <li>2026:
+			<ul>
+				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August cycle)</li>
+			</ul>
 		    <li>2025: 
 			<ul>
 				<li>IEEE International Conference on Data Mining (ICDM)</li>
