--- a/teaching.html
+++ b/teaching.html
@@ -51,7 +51,7 @@
             		<li>Fall 2025 </li>
                     <ul>
                         <li>DSC 3334 - Algorithms and Data Structures </li>
-                        <li>CSI 5V93 - Advanced Machine Learning </li>
+                        <li>CSI 5326 - Advanced Machine Learning </li>
                     </ul>
                     
             		<li>Spring 2025 </li>
@@ -78,7 +78,7 @@
             	<ul>
             		<li>Fall 2025 </li>
                     <ul>
-                        <li>INF 428/528 - Analysis, Visualization, and Prediction in Analytics </li>
+<!--                         <li>INF 428/528 - Analysis, Visualization, and Prediction in Analytics </li> -->
                         <li>INF 624 - Predictive Modeling </li>
                     </ul>
                     
