--- a/services.html
+++ b/services.html
@@ -103,6 +103,7 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August cycle)</li>
 			</ul>
 		    <li>2025: 
