--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[07/2025] I will serve as a reviewer for AAAI 2026. </li>
 		<li>[07/2025] I will serve as a reviewer for KDD 2026 (August cycle). </li>
 		<li>[05/2025] I will serve as a panelist for NSF. </li>
 		<li>[05/2025] I receive a Gift Fund from NEC Laboratories America. </li>
