--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[07/2025] I will serve as a reviewer for AAAI 2026. </li>
-		<li>[07/2025] I will serve as a reviewer for KDD 2026 (August cycle). </li>
+		<li>[07/2025] I will serve as a PC member for AAAI 2026. </li>
+		<li>[07/2025] I will serve as a PC member for KDD 2026 (August cycle). </li>
 		<li>[05/2025] I will serve as a panelist for NSF. </li>
 		<li>[05/2025] I receive a Gift Fund from NEC Laboratories America. </li>
 		<li>[05/2025] I will serve as a panelist for DOE </li>
