--- a/talks.html
+++ b/talks.html
@@ -55,7 +55,8 @@
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu, Yevgeniy Semenov.<br>
                             The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 16th, 2025.
-<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                            [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>]
+                            [<a href="https://drive.google.com/file/d/1VdZOAI7eqwt7nX83bF8l1jBqu3aC7dhW/view?usp=sharing">Slides</a>]
                         </li>
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu, Yevgenly Semenov.<br>
@@ -71,7 +72,8 @@
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 16th, 2025.
-<!--                             [<a href="https://sites.google.com/view/aaai25-tutorial-algor-fair/home">Website</a>] -->
+                            [<a href="https://sites.google.com/view/ijcai25-tutorial-fairness/home">Website</a>]
+<!--                             [<a href="https://drive.google.com/file/d/12Q-HAPL2UQpL2nsYriyj-uKfR3qj1ReR/view?usp=sharing">Slides</a>] -->
                         </li>
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
