--- a/students.html
+++ b/students.html
@@ -126,6 +126,7 @@
             <div>
             <p><strong>Thesis Committee</strong></p>
             	<ul>
+                    <li>Hunter Buttrum, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2027 (expected)</li>
             		<li>Joseph Yu, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
                     <li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
                     <li>Abhishek Raj, Ph.D. student, Department of Chemistry and Biochemistry, Baylor University, 2026, (expected)</li>
