--- a/talks.html
+++ b/talks.html
@@ -73,7 +73,7 @@
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
                             The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 16th, 2025.
                             [<a href="https://sites.google.com/view/ijcai25-tutorial-fairness/home">Website</a>]
-<!--                             [<a href="https://drive.google.com/file/d/12Q-HAPL2UQpL2nsYriyj-uKfR3qj1ReR/view?usp=sharing">Slides</a>] -->
+                            [<a href="https://drive.google.com/file/d/1a7VXi3Q0iB_ImtRQ80He8TQmZ_raN-rg/view?usp=sharing">Slides</a>]
                         </li>
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Xintao Wu.<br>
