--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[08/2025] I will serve as a PC member for PAKDD 2026. </li>
 		<li>[07/2025] I will serve as a PC member for AAAI 2026. </li>
 		<li>[07/2025] I will serve as a PC member for KDD 2026 (August cycle). </li>
 		<li>[05/2025] I will serve as a panelist for NSF. </li>
-		<li>[05/2025] I receive a Gift Fund from NEC Laboratories America. </li>
+		<li>[05/2025] I received a Gift Fund from NEC Laboratories America. </li>
 		<li>[05/2025] I will serve as a panelist for DOE </li>
 		<li>[05/2025] Two papers are accepted by ACL 2025. </li>
 		<li>[05/2025] I will serve as a program committee member for ICDM 2025. </li>
@@ -119,7 +120,7 @@
 		<li>[03/2025] I will serve as a program committee member for IEEE BigData 2025. </li>
 		<li>[03/2025] I will serve as a program committee member for CIKM 2025. </li>
 		<li>[03/2025] Our survey on Multi-Modal Foundation Models for Computational Pathology is available online (arXiv preprint, 2503.09091). </li>
-		<li>[03/2025] Two workshops (EAI and UDM) are accepted by KDD 2025. </li>
+		<li>[03/2025] Two workshops (EAI and UDM) have been accepted by KDD 2025. </li>
 		<li>[03/2025] I will serve as a reviewer for ACML 2025. </li>
 		<li>[03/2025] I will serve as a panelist for NSF. </li>
 		<li>[02/2025] I will serve as a reviewer for NeurIPS 2025. </li>
