--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
 	<div class="my-4 text-left">
 	    <h2>Awards & Honors</h2>
 		<ul>
-			<li type="disc"> Gift Fund. NEC Laboratories America. </li>
+			<li type="disc"> <strong>Co-PI</strong>,  National Science Foundation (NSF). “IUCRC Phase I Baylor University: Center for Responsible Artificial Intelligence and Governance (CRAIG)”. Duration: 10/2025 - 09/2030. $510,814.</li>
+			<li type="disc"> <strong>PI</strong>, Gift Fund. NEC Laboratories America. </li>
 			<li type="disc"> Outstanding Reviewer. The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD2025).</li>
 			<li type="disc"> Dissertation Research Award. The University of Texas at Dallas, 2021-2022. </li>
 			<li type="disc"> Student Travel Award. IEEE International Conference on Data Mining (ICDM), U.S. National Science Foundation, 2020. </li>
