--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[08/2025] An NSF grant is awarded. </li>	
 		<li>[08/2025] I will serve as a PC member for PAKDD 2026. </li>
 		<li>[07/2025] I will serve as a PC member for AAAI 2026. </li>
 		<li>[07/2025] I will serve as a PC member for KDD 2026 (August cycle). </li>
@@ -194,10 +195,10 @@
 			<em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2025
 		</li>
 		<li>
-                        <strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
-                        Qin Tian, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
-                        <em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
-                </li>
+			<strong>[KDD'25]</strong> MLDGG: Meta-Learning for Domain Generalization on Graphs. <br>
+			Qin Tian, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang, Yujie Lin, Dong Li <br>
+			<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em>, 2025
+        </li>
 		<li>
 			<strong>[KDD'24]</strong> Algorithmic Fairness Generalization under Covariate and Dependence Shifts Simultaneously. </br>
 			<strong>Chen Zhao</strong><sup>*</sup>, Kai Jiang<sup>*</sup>, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Earl Grant, Feng Chen. <br/>
