--- a/services.html
+++ b/services.html
@@ -103,11 +103,12 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
 				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August cycle)</li>
 			</ul>
-		    <li>2025: 
+		    <li>2025:  
 			<ul>
 				<li>IEEE International Conference on Data Mining (ICDM)</li>
 				<li>ACM International Conference on Multimedia (MM)</li>
