--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[08/2025] I will serve as a PC member for AISTATS 2026. </li>
 		<li>[08/2025] An NSF grant is awarded. </li>	
 		<li>[08/2025] I will serve as a PC member for PAKDD 2026. </li>
 		<li>[07/2025] I will serve as a PC member for AAAI 2026. </li>
