--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
                 <h1>Chen Zhao (赵辰)</h1>
                 <p>
                     Assistant Professor<br>
-			<a href="https://www.ecs.baylor.edu/research-departments/computer-science">Department of Computer Science</a><br>
-			<a href="https://www.ecs.baylor.edu/">School of Engineering and Computer Science</a><br>
-			<a href="https://www.baylor.edu/">Baylor University</a><br>
-			One Bear Place #97141, Waco, Texas 76798, United States<br>
+					<a href="https://www.ecs.baylor.edu/research-departments/computer-science">Department of Computer Science</a><br>
+					<a href="https://www.ecs.baylor.edu/">School of Engineering and Computer Science</a><br>
+					<a href="https://www.baylor.edu/">Baylor University</a><br>
+					One Bear Place #97141, Waco, Texas 76798, United States<br>
 
                     <br>
 
                     Adjunct Professor<br>
-			<a href="https://www.albany.edu/cehc/departments/information-sciences-and-technology">Department of Information Sciences and Technology</a><br>
-			<a href="https://www.albany.edu/cehc">College of Emergency Preparedness, Homeland Security & Cybersecurity</a><br>
-			<a href="https://www.albany.edu/">The State University of New York at Albany</a><br>
-			1400 Washington Ave, Albany, New York 12222, United States<br>
+					<a href="https://www.albany.edu/cehc/departments/information-sciences-and-technology">Department of Information Sciences and Technology</a><br>
+					<a href="https://www.albany.edu/cehc">College of Emergency Preparedness, Homeland Security & Cybersecurity</a><br>
+					<a href="https://www.albany.edu/">The State University of New York at Albany</a><br>
+					1400 Washington Ave, Albany, New York 12222, United States<br>
 
                     <br>
 
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[09/2025] I will serve as a reviewer for ICLR 2026. </li>
 		<li>[08/2025] I will serve as a PC member for AISTATS 2026. </li>
 		<li>[08/2025] An NSF grant is awarded. </li>	
 		<li>[08/2025] I will serve as a PC member for PAKDD 2026. </li>
