--- a/services.html
+++ b/services.html
@@ -52,20 +52,20 @@
             <ul>
                     <li>2025:
                         <ul>
-			    <li>[Session Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'25).</li>
-			    <li>[Organizer, Chair] <a href="https://arrl-icdm.github.io/arrl2025/">The International Workshop on Adaptable, Reliable, and Responsible Learning</a> (ARRL @ ICDM'25)</li>
-			    <li>[Organizer, Chair] <a href="https://meviuslab.github.io/EAI2025/">The 4th Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'25).</li>
-                            <li>[Organizer, Chair] <a href="https://meviuslab.github.io/UDM2025/">The 4th Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'25).</li>
-			    <li>[Session Chair] The Annual AAAI Conference on Artificial Intelligence (AAAI'25).</li>
-			    <li>[Workshop Chair] <a href="https://bigdataieee.org/BigData2025/index.html">The IEEE International Conference on Big Data</a> (IEEE BigData'25) </li>
-			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning</a> (ARRML @ SDM'25).</li>
-			    <li>[Tutorial Chair] <a href="https://www3.cs.stonybrook.edu/~icdm2025/organizingcommittee.html#:~:text=Stony%20Brook%20University-,Tutorial%20Chairs,-Chen%20Zhao"> The IEEE International Conference on Data Mining</a> (ICDM'25).</li>
+						    <li>[Session Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'25).</li>
+						    <li>[Organizer, Chair] <a href="https://arrl-icdm.github.io/arrl2025/">The International Workshop on Adaptable, Reliable, and Responsible Learning</a> (ARRL @ ICDM'25)</li>
+						    <li>[Organizer, Chair] <a href="https://meviuslab.github.io/EAI2025/">The 4th Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'25).</li>
+			                            <li>[Organizer, Chair] <a href="https://meviuslab.github.io/UDM2025/">The 4th Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'25).</li>
+						    <li>[Session Chair] The Annual AAAI Conference on Artificial Intelligence (AAAI'25).</li>
+						    <li>[Workshop Chair] <a href="https://bigdataieee.org/BigData2025/index.html">The IEEE International Conference on Big Data</a> (IEEE BigData'25) </li>
+						    <li>[Organizer, Chair] <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning</a> (ARRML @ SDM'25).</li>
+						    <li>[Tutorial Chair] <a href="https://www3.cs.stonybrook.edu/~icdm2025/organizingcommittee.html#:~:text=Stony%20Brook%20University-,Tutorial%20Chairs,-Chen%20Zhao"> The IEEE International Conference on Data Mining</a> (ICDM'25).</li>
                             <li>[Tutorial Chair] <a href="https://www.pakdd2025.org/organization/#:~:text=de%20Madrid%2C%20Spain-,Tutorial%20Chairs,-Chen%20Zhao%2C%20Baylor"> The Pacific-Asia Conference on Knowledge Discovery and Data Mining</a> (PAKDD'25).</li>
                         </ul>
                     <li>2024:
                         <ul>
                             <li>[Session Chair] IEEE International Conference on Big Data (IEEE BigData'24).</li>
-			    <li>[Organizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshop on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
+						    <li>[Organizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshop on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
                             <li>[Organizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshop on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
                             <li>[Organizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
@@ -91,10 +91,10 @@
 
             <p><strong>Journal Editorial Board </strong></p>
             <ul>
-		<li>[Guest Editor] Frontiers in Big Data (IF=2.4), Frontiers Media SA, <a href="https://www.frontiersin.org/research-topics/68107/ethical-artificial-intelligence-methods-and-applications"> Special Issue: Ethical Artificial Intelligence: Methods and Applications</a>, since 2024.</li>
+				<li>[Guest Editor] Frontiers in Big Data (IF=2.4), Frontiers Media SA, <a href="https://www.frontiersin.org/research-topics/68107/ethical-artificial-intelligence-methods-and-applications"> Special Issue: Ethical Artificial Intelligence: Methods and Applications</a>, since 2024.</li>
                 <li>[Guest Editor] Mathematics (IF=2.3), MDPI, <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D"> Special Issue: Advances in Trustworthy and Robust Artificial Intelligence</a>, since 2024.</li>
                 <li>[Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
-		<li>[Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
+				<li>[Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
             </ul>
 
 		
@@ -103,6 +103,7 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>International Conference on Learning Representations (ICLR)</li>
 				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
 				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
