--- a/talks.html
+++ b/talks.html
@@ -53,6 +53,12 @@
                     Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluations
                     <ul>
                         <li>
+                            Dong Li, Guihong Wan, Xintao Wu, Yevgeniy Semenov, <strong>Chen Zhao</strong>. <br>
+                            The Annual AAAI Conference on Artificial Intelligence (AAAI), Singapore, January 20th, 2026.
+<!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
+<!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
+                        </li>
+                        <li>
                             Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu, Yevgeniy Semenov.<br>
                             The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 18th, 2025.
                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>]
