--- a/talks.html
+++ b/talks.html
@@ -58,12 +58,14 @@
 <!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
 <!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
                         </li>
+                        
 <!--                         <li>
                             Dong Li, Ninghui Hao, Guihong Wan, Xintao Wu, <strong>Chen Zhao</strong>. <br>
                             The IEEE International Conference on Data Mining (ICDM), Washington D.C., November 13th, 2025.
-<!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
-<!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
+                            [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>]
+                            [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>]
                         </li> -->
+                        
                         <li>
                             Dong Li, <strong>Chen Zhao</strong>, Guihong Wan, Xintao Wu, Yevgeniy Semenov.<br>
                             The International Joint Conference on Artificial Intelligence (IJCAI), Montreal, Canada, August 18th, 2025.
@@ -84,8 +86,8 @@
                         <li>
                             Ninghui Hao, Boshen Yan, Dong Li, <strong>Chen Zhao</strong>, Guihong Wan. <br>
                             The IEEE International Conference on Data Mining (ICDM), Washington D.C., November 13th, 2025.
-<!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
-<!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
+                            [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
+                            [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
                         </li>
                     </ul>
                 </li> -->
