--- a/services.html
+++ b/services.html
@@ -103,6 +103,7 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>The Web Conference (WWW)</li>
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
 				<li>International Conference on Learning Representations (ICLR)</li>
 				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
@@ -121,6 +122,7 @@
 				<li>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</li>
 				<li>International Joint Conference on Neural Networks (IJCNN)</li>
 				<li>The Asian Conference on Machine Learning (ACML)</li>
+				<li>The Web Conference (WWW)</li>
 				<li>International Conference on Machine Learning (ICML)</li>
 				<li>International Joint Conference on Artificial Intelligence (IJCAI, Main track, Survey track)</li> 
 				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
