--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 	    <ul>
 		<li>[09/2025] A tutorial is accepted by AAAI 2026. </li>
 		<li>[09/2025] I will serve as a reviewer for ICLR 2026. </li>
+		<li>[09/2025] I will serve as a PC member for WWW 2026. </li>
 		<li>[08/2025] I will serve as a PC member for AISTATS 2026. </li>
 		<li>[08/2025] An NSF grant is awarded. </li>	
 		<li>[08/2025] I will serve as a PC member for PAKDD 2026. </li>
