--- a/talks.html
+++ b/talks.html
@@ -54,7 +54,7 @@
                     <ul>
                         <li>
                             Dong Li, Guihong Wan, Xintao Wu, Yevgeniy Semenov, <strong>Chen Zhao</strong>. <br>
-                            The Annual AAAI Conference on Artificial Intelligence (AAAI), Singapore, January 20th, 2026.
+                            The Annual AAAI Conference on Artificial Intelligence (AAAI), Singapore, January 21st, 2026.
 <!--                             [<a href="https://sites.google.com/view/ijcai25-tutorial-cpath/home">Website</a>] -->
 <!--                             [<a href="https://drive.google.com/file/d/1MMXEVfxjoCdFsAZIRsIAR6m9kJol4MId/view?usp=sharing">Slides</a>] -->
                         </li>
