--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[09/2025] A paper is accepted by NeurIPS 2025. </li>
 		<li>[09/2025] A tutorial is accepted by AAAI 2026. </li>
 		<li>[09/2025] I will serve as a reviewer for ICLR 2026. </li>
 		<li>[09/2025] I will serve as a PC member for WWW 2026. </li>
@@ -168,6 +169,12 @@
 		<p style="color:red;">For a full list of publications, see <a href="publications.html">Publications</a>.</p>
             <ul>
 
+
+		<li>
+			<strong>[NeurIPS'25]</strong> SolverLLM: Leveraging Test-Time Scaling for Optimization Problem via LLM-Guided Search. </br>
+			Dong Li, Xujiang Zhao, Linlin Yu, Yanchi Liu, Wei Cheng, Zhengzhang Chen, Zhong Chen, Feng Chen, Chen Zhao, Haifeng Chen. <br/>
+			<em>In Proceedings of the 39th Annual Conference on Neural Information Processing Systems</em>, 2025
+		</li>
 		<li>
 			<strong>[ACL'25]</strong> Uncertainty Propagation on LLM Agent. </br>
 			Qiwei Zhao<sup>*</sup>, Dong Li<sup>*</sup>, Yanchi Liu, Wei Cheng, Yiyou Sun, Mika Oishi, Takao Osaki, Katsushi Matsuda, Huaxiu Yao, <strong>Chen Zhao</strong>, Haifeng Chen, Xujiang Zhao. <br/>
