--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 		<li>
 			<strong>[NeurIPS'25]</strong> SolverLLM: Leveraging Test-Time Scaling for Optimization Problem via LLM-Guided Search. </br>
-			Dong Li, Xujiang Zhao, Linlin Yu, Yanchi Liu, Wei Cheng, Zhengzhang Chen, Zhong Chen, Feng Chen, Chen Zhao, Haifeng Chen. <br/>
+			Dong Li, Xujiang Zhao, Linlin Yu, Yanchi Liu, Wei Cheng, Zhengzhang Chen, Zhong Chen, Feng Chen, <strong>Chen Zhao</strong>, Haifeng Chen. <br/>
 			<em>In Proceedings of the 39th Annual Conference on Neural Information Processing Systems</em>, 2025
 		</li>
 		<li>
