--- a/publications.html
+++ b/publications.html
@@ -137,9 +137,10 @@
             <p><strong>Conference Papers</strong></p>
 
             <p style="text-align:justify;background-color:#dbd9db">
-                <strong>KDD</strong>(5), 
+                <strong>NeurIPS</strong>(1),
+				<strong>KDD</strong>(5), 
                 <strong>IJCAI</strong>(4), 
-		<strong>ACL</strong>(2), 
+				<strong>ACL</strong>(2), 
                 <strong>AAAI</strong>(3),
                 <strong>CVPR</strong>(1), 
                 <strong>ICDE</strong>(1),
@@ -158,7 +159,11 @@
             </p>
             
                 <ol>
-
+		<li>
+			<strong>[NeurIPS'25]</strong> SolverLLM: Leveraging Test-Time Scaling for Optimization Problem via LLM-Guided Search. </br>
+			Dong Li, Xujiang Zhao, Linlin Yu, Yanchi Liu, Wei Cheng, Zhengzhang Chen, Zhong Chen, Feng Chen, <strong>Chen Zhao</strong>, Haifeng Chen. <br/>
+			<em>In Proceedings of the 39th Annual Conference on Neural Information Processing Systems</em>, 2025
+		</li>
 		<li>
 			<strong>[ACL'25]</strong> Uncertainty Propagation on LLM Agent. </br>
 			Qiwei Zhao<sup>*</sup>, Dong Li<sup>*</sup>, Yanchi Liu, Wei Cheng, Yiyou Sun, Mika Oishi, Takao Osaki, Katsushi Matsuda, Huaxiu Yao, <strong>Chen Zhao</strong>, Haifeng Chen, Xujiang Zhao. <br/>
