--- a/teaching.html
+++ b/teaching.html
@@ -76,9 +76,14 @@
             	</ul>
             <p><strong>The State University of New York at Albany</strong></p>
             	<ul>
+                    <li>Spring 2026 </li>
+                    <ul>
+                        <li>INF 428/528 - Analysis, Visualization, and Prediction in Analytics </li>
+                        <li>INF 624 - Predictive Modeling </li>
+                    </ul>
+                    
             		<li>Fall 2025 </li>
                     <ul>
-<!--                         <li>INF 428/528 - Analysis, Visualization, and Prediction in Analytics </li> -->
                         <li>INF 624 - Predictive Modeling </li>
                     </ul>
                     
