--- a/publications.html
+++ b/publications.html
@@ -351,6 +351,11 @@
             <p><strong>Workshop Papers</strong></p>
                 <ol>
 					<li>
+						<strong>[NeurIPS'25-W]</strong> A Theoretical Analysis for CUR Decomposition based Active Learning and Feature Selection. <br>
+						Zhong Chen, <strong>Chen Zhao</strong>, Yi He. <br>
+						<em>NeurIPS Workshop on Optimization for Machine Learning</em>, 2025
+					</li>
+					<li>
 						<strong>[NeurIPS'25-W]</strong> Fine-Tuning Vision-Language Models for Multimodal Polymer Property Prediction. <br>
 						An Vuong, Minh-Hao Van, Prateek Verma, <strong>Chen Zhao</strong>, Xintao Wu. <br>
 						<em>NeurIPS Workshop on AI for Accelerated Materials Design</em>, 2025
